@@ -170,10 +170,19 @@ class CLinkPager extends CBasePager
 	 */
 	public function registerClientScript()
 	{
-		$cs=Yii::app()->getClientScript();
-		if($this->cssFile===null)
-			$cs->registerCssFile(CHtml::asset(Yii::getPathOfAlias('system.web.widgets.pagers.pager').'.css'));
-		else if($this->cssFile!==false)
-			$cs->registerCssFile($this->cssFile);
+		if($this->cssFile!==false)
+			self::registerCssFile($this->cssFile);
+	}
+
+	/**
+	 * Registers the needed CSS file.
+	 * @param string the CSS URL. If null, a default CSS URL will be used.
+	 * @since 1.0.2
+	 */
+	public static function registerCssFile($url=null)
+	{
+		if($url===null)
+			$url=CHtml::asset(Yii::getPathOfAlias('system.web.widgets.pagers.pager').'.css');
+		Yii::app()->getClientScript()->registerCssFile($url);
 	}
 }
